16754
```scala
object Foo extends App {
  def macro bar() = Apply(Select(_this, newTermName("quux")), List(List()))
  def quux() = println("o hai")
}
```
```scala
D:\Dropbox\Scratchpad\Scala>scalac -Xmacros Macros.scala
Macros.scala:2: error: not found: value _this
  def macro bar() = Apply(Select(_this, newTermName("quux")), List(List()))
                                 ^
one error found
```
